qetta/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qetta-production
  labels:
    name: qetta-production
    environment: production
